--- a/views/agent_list.html
+++ b/views/agent_list.html
@@ -4,39 +4,41 @@
     <meta charset="UTF-8">
     <title>Title</title>
    <link type="text/css"  rel="stylesheet" href="//media.twiliocdn.com/taskrouter/quickstart/agent.css"/>
+   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 
 </head>
 <body>
 <div>
 	 <h2>A selection of voice workers</h2>
-    <div id="workers" />
+    
+    
     <script language="javascript">
-      voice_workers ="{{ voice_workers }}";
+      
+      $.post( "/agent_list", function( data ) {
+        
+        console.log(data);
+        
+        const voice_workers = data;
 
-        for(var i = 0; i < JSON.stringify(voice_workers.length); i++) {
-          console.log(voice_workers[i].friendlyName);  
+         for(var i = 0; i < voice_workers.length; i++) {
+          
            var workerSid = voice_workers[i].sid;
-        var workerName = voice_workers[i].friendlyName;
-        var activity = voice_workers[i].activityName;
-           
+           var workerName = voice_workers[i].friendlyName;
+           var activity = voice_workers[i].activityName;
+
+        
+        $("#workers").append('<a id="link" href="/agents?WorkerSid=' + workerSid + '">' + workerName + ' - ' + activity + '</a><br />');
+      
+
         }
         
-        
-    	for (var voice_worker in voice_workers)
-    	{
 
-       // console.log(voice_worker);
-        
-        var workerSid = voice_worker.sid;
-        var workerName = voice_worker.friendlyName;
-        var activity = voice_worker.activityName;
-         document.getElementById("workers").innerHTML =  '<a href="/agents?WorkerSid="' + voice_worker.sid+'">' + workerName + '</a>'+ voice_worker.activityName;
+});
 
-    //  <a href="/agents?WorkerSid={{ voice_worker.sid }}">{{ voice_worker.friendly_name }}</a>  
-
-    // ({{ voice_worker.activity_name }})</font><br />
-     }
+      
 </script>
+<div id="workers" />
+<a id="link" />
 </div>
 <div style="padding-top:1.5em">
     <a href="/">Back to Main Page</a>
