--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -79,7 +79,7 @@
                     <p class="lead">Owl Corp started in 1787, we understand what it takes to create business that lasts. </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="public/img/3.jpg" alt="">
+                    <img class="img-responsive" src="img/3.jpg" alt="">
                 </div>
             </div>
 
@@ -185,11 +185,11 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="../public/js/jquery.js"></script>
+    <script src="js/jquery.js"></script>
    
 
    <!-- Bootstrap Core JavaScript -->
-    <script src="../public/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
 </body>
 
