--- a/views/agent_desktop.html
+++ b/views/agent_desktop.html
@@ -41,7 +41,7 @@
 
 
     <script type="text/javascript">
-        let caller_id = '+448081645567';
+        let caller_id = ''; // ADD YOUR TWILIO NUMBER HERE
    
         Twilio.Device.ready(function (device) {
             console.log("Client is ready for connections");
