--- a/views/agent_desktop.html
+++ b/views/agent_desktop.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>OwlCorp - Chat Agent Screen</title>
 
@@ -7,7 +8,7 @@
     <script type="text/javascript" src="//media.twiliocdn.com/taskrouter/js/v1.13/taskrouter.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 
-    <link type="text/css" rel="stylesheet" href="//media.twiliocdn.com/taskrouter/quickstart/agent.css"/>
+    <link type="text/css" rel="stylesheet" href="//media.twiliocdn.com/taskrouter/quickstart/agent.css" />
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
     <style>
@@ -41,8 +42,8 @@
 
 
     <script type="text/javascript">
-        let caller_id = ''; // ADD YOUR TWILIO NUMBER HERE
-   
+        let caller_id = '+18556371789'; // ADD YOUR TWILIO NUMBER HERE
+
         Twilio.Device.ready(function (device) {
             console.log("Client is ready for connections");
         });
@@ -67,7 +68,7 @@
 
         function call() {
             // get the phone number or client to connect the call to
-            params = {"PhoneNumber": $("#number").val()};
+            params = { "PhoneNumber": $("#number").val() };
             Twilio.Device.connect(params);
         }
 
@@ -93,23 +94,23 @@
         let worker;
         let isManager = false;  // workaround for worker's skills not being passed with a reservation
         let activity_list = {};
-        
+
         function registerTaskRouterCallbacks(data) {
-            console.log(data); 
-            worker = new Twilio.TaskRouter.Worker(data);     
-             
-              worker.on('ready', function (worker) {
+            console.log(data);
+            worker = new Twilio.TaskRouter.Worker(data);
+
+            worker.on('ready', function (worker) {
                 logger("Successfully registered as: " + worker.friendlyName);
-                if(worker.attributes.skills && worker.attributes.skills.includes('manager')) {
+                if (worker.attributes.skills && worker.attributes.skills.includes('manager')) {
                     document.querySelector('h2').innerHTML = "ACME manager desktop: " + worker.friendlyName;
                     isManager = true;
                 } else {
                     document.querySelector('h2').innerHTML = "ACME agent desktop: " + worker.friendlyName;
                 }
-                if(worker.attributes.skills) {
+                if (worker.attributes.skills) {
                     logger("Skills: " + worker.attributes.skills);
                 }
-                    logger("Current activity is: " + worker.activityName);
+                logger("Current activity is: " + worker.activityName);
                 refreshWorkerUI(worker);
             });
 
@@ -161,8 +162,8 @@
 
         function goOffline() {
             // update worker's activity to Offline
-           
-           worker.update("ActivitySid",  activity_list["Offline"], function (error, worker) {
+
+            worker.update("ActivitySid", activity_list["Offline"], function (error, worker) {
                 if (error) {
                     console.log(error.code);
                     console.log(error.message);
@@ -176,17 +177,17 @@
 
             console.log("Worker activity: " + activityName);
             let buttons = {
-                'online'   : false,
-                'offline'  : false,
-                'mute'     : false,
-                'unmute'   : false,
-                'escalate' : false,
-                'accept'   : false,
-                'reject'   : false,
-                'hangup'   : false,
+                'online': false,
+                'offline': false,
+                'mute': false,
+                'unmute': false,
+                'escalate': false,
+                'accept': false,
+                'reject': false,
+                'hangup': false,
             }
-            
-            switch(activityName) {
+
+            switch (activityName) {
                 case "Idle":
                     buttons['offline'] = true;
                     break;
@@ -198,7 +199,7 @@
                     buttons['reject'] = true;
                     break;
                 case "In a Call":
-                    if(!isManager) {
+                    if (!isManager) {
                         buttons['escalate'] = true;
                     }
                     buttons['mute'] = true;
@@ -210,7 +211,7 @@
                     buttons['online'] = true;
                     break;
             }
-            Object.keys(buttons).forEach(function(button) {
+            Object.keys(buttons).forEach(function (button) {
                 //console.log(button, buttons[button]);
                 document.getElementById("btn_" + button).style.display = (buttons[button] ? "inline" : "none");
             });
@@ -229,19 +230,13 @@
                 // Manager escalation, issue call instuction
                 console.log("manager task");
                 console.log(ReservationObject);
-                
+
                 console.log(window.location.protocol + "//" + window.location.host + "/transferTwiml?conference=" + ReservationObject.task.attributes.customer_taskSid)
-                    ReservationObject.call(
+                ReservationObject.call(
                     // callFrom
                     caller_id,  // CC's phone number
                     // callUrl - URI that is executed on the answering Worker's leg
                     window.location.protocol + "//" + window.location.host + "/transferTwiml?conference=" + ReservationObject.task.attributes.customer_taskSid,
-                    // callStatusCallbackUrl (optional) - status callback url
-                    // callAccept (optional) - accept the task before initiating call
-                    "false",
-                    // callRecord (optional) - record-from-answer or false - false since we're already recoding the main conference
-                    "false",
-                    // resultCallback (optional) - a JavaScript Function that will be called upon the completion of the dial
                     function (error, reservation) {
                         if (error) {
                             console.log(error.code);
@@ -252,17 +247,17 @@
                     }
                 );
 
-                ReservationObject.accept(); // Call instruction requires you to manually accept the Reservation prior to issuing the instruction
+                //  ReservationObject.accept(); // Call instruction requires you to manually accept the Reservation prior to issuing the instruction
                 unmuteCaller(ReservationObject.task.attributes.customer, ReservationObject.task.attributes.conference);
             }
             else {
-                
+
                 // not a transfer, simply create a new conference and join customer and worker into it
                 var options = {
                     "From": caller_id,  // CC's phone number
                     "PostWorkActivitySid": activity_list["WrapUp"],
                     "Timeout": "30",
-                      };
+                };
                 console.log("Starting conference...");
                 console.log(options);
 
@@ -289,15 +284,27 @@
             //Initiate a blind transfer to a Manager
             //Make a post request to /callTransfer with the from, to, agent and tasksid
             // callTransfer endpoint will put customer on hold and create a new task/route call to manage
-          //  console.log(ReservationObject.task.sid);
-            $.post("/callTransfer", {
-                participant: ReservationObject.task.attributes.conference.participants.customer, //customer callSid
-                conference: ReservationObject.task.attributes.conference.sid, //conference
+            //  console.log(ReservationObject.task.sid);
+            var options = {
+                "participant": ReservationObject.task.attributes.conference.participants.customer, //customer callSid
+                "conference": ReservationObject.task.attributes.conference.sid, //conference
                 //todo: remove// customer: ReservationObject.task.attributes.conference.participants.customer, //customer callsid - consider removing
-                taskSid: ReservationObject.task.sid, //tasksid for the call transfer
-                selected_language: (ReservationObject.task.attributes.selected_language ? ReservationObject.task.attributes.selected_language : ''),
-                from: (ReservationObject.task.attributes.from ? ReservationObject.task.attributes.from : '')
-            });
+                "taskSid": ReservationObject.task.sid, //tasksid for the call transfer
+                "selected_language": (ReservationObject.task.attributes.selected_language ? ReservationObject.task.attributes.selected_language : ''),
+                "from": (ReservationObject.task.attributes.from ? ReservationObject.task.attributes.from : '')
+            };
+
+            console.log(ReservationObject.task.sid);
+
+            $.post("/callTransfer", {
+                "participant": ReservationObject.task.attributes.conference.participants.customer, //customer callSid
+                "conference": ReservationObject.task.attributes.conference.sid, //conference
+                //todo: remove// customer: ReservationObject.task.attributes.conference.participants.customer, //customer callsid - consider removing
+                "taskSid": ReservationObject.task.sid, //tasksid for the call transfer
+                "selected_language": (ReservationObject.task.attributes.selected_language ? ReservationObject.task.attributes.selected_language : ''),
+                "from": (ReservationObject.task.attributes.from ? ReservationObject.task.attributes.from : '')
+            }
+            );
         }
 
         function muteCaller() {
@@ -333,11 +340,11 @@
             log.scrollTop = log.scrollHeight;
         }
 
-        
+
         window.onload = function () {
             // Initialize TaskRouter.js on page load using window.workerToken -
             // a Twilio Capability token that was set from rendering the template with agents endpoint
-          
+
 
             function getParameterByName(name, url) {
                 if (!url) url = window.location.href;
@@ -347,87 +354,89 @@
                 if (!results) return null;
                 if (!results[2]) return '';
                 return decodeURIComponent(results[2].replace(/\+/g, " "));
-            }  
+            }
 
-            let Worker_sid = getParameterByName('WorkerSid'); 
+            let Worker_sid = getParameterByName('WorkerSid');
             console.log(Worker_sid);
-            
-            $.post( "/worker_token", { WorkerSid: getParameterByName('WorkerSid') })
-              .done(function( data ) {  
-              
-               registerTaskRouterCallbacks(data);
-              });   
+
+            $.post("/worker_token", { WorkerSid: getParameterByName('WorkerSid') })
+                .done(function (data) {
+
+                    registerTaskRouterCallbacks(data);
+                });
 
 
-             $.post("/activities").done(function(data){
-               
+            $.post("/activities").done(function (data) {
+
                 var name;
                 var sid;
-                
-                
-                for (var i = 0; i < data.length; i++){
-                
-                    if (data[i] !== 'undefined'){
-                    var obj = data[i];
-               
-                for (var key in obj){
-                    
-                    if (key =='friendlyName'){                       
-                        name = obj[key];
 
-                    }else if(key =='sid'){
-                        sid = obj[key];
+
+                for (var i = 0; i < data.length; i++) {
+
+                    if (data[i] !== 'undefined') {
+                        var obj = data[i];
+
+                        for (var key in obj) {
+
+                            if (key == 'friendlyName') {
+                                name = obj[key];
+
+                            } else if (key == 'sid') {
+                                sid = obj[key];
+                            }
+                            activity_list[name] = sid;
+
+
+                        }
+
                     }
-                    activity_list[name] = sid;
-                       
-                    
                 }
-            
-            }
-        }
-                    
-                })
 
-                
+            })
 
-            $.post( "/client_token", { WorkerSid: Worker_sid })
-              .done(function( data ) {
-                Twilio.Device.setup(data, {debug: true});
-              
-              });         
-            
-           
-             logger("Initializing...");
-            
+
+
+            $.post("/client_token", { WorkerSid: Worker_sid })
+                .done(function (data) {
+                    Twilio.Device.setup(data, { debug: true });
+
+                });
+
+
+            logger("Initializing...");
+
         };
     </script>
 </head>
-<body>
-<div class="content">
-    <h2>ACME desktop</h2>
 
-    <section id="worker_status">
-    </section>
-    <section>
-        <br/>
-        <button id="btn_accept" style="display:none;" class="btn" onclick="acceptReservation()">Accept</button>
-        <button id="btn_reject" style="display:none;" class="btn" onclick="rejectReservation()">Reject</button>
-        <button id="btn_escalate" style="display:none;" class="btn" onclick="transferCallBlind_Manager()">Escalate</button>
-        <button id="btn_mute" style="display:none;" class="btn" onclick="muteCaller()">Mute</button>
-        <button id="btn_unmute" style="display:none;" class="btn" onclick="unmuteCaller()">Unmute</button>
-        <button id="btn_hangup" style="display:none;" class="btn" onclick="hangup();">Hangup</button>
-        <button id="btn_online" style="display:none;" class="btn" onclick="goAvailable()">Go Available</button>
-        <button id="btn_offline" style="display:none;" class="btn" onclick="goOffline()">Go Offline</button>
-    </section>
-    <section class="log">
-    </section>
-    <br/>
-    <section>
-    <textarea id="log" readonly="true"></textarea>
-    </section>
-    <div style="padding-top:0.5em">
-        <a href="/agent_list">Back to Agent List</a>
+<body>
+    <div class="content">
+        <h2>ACME desktop</h2>
+
+        <section id="worker_status">
+        </section>
+        <section>
+            <br />
+            <button id="btn_accept" style="display:none;" class="btn" onclick="acceptReservation()">Accept</button>
+            <button id="btn_reject" style="display:none;" class="btn" onclick="rejectReservation()">Reject</button>
+            <button id="btn_escalate" style="display:none;" class="btn" onclick="transferCallBlind_Manager()">Escalate</button>
+            <button id="btn_mute" style="display:none;" class="btn" onclick="muteCaller()">Mute</button>
+            <button id="btn_unmute" style="display:none;" class="btn" onclick="unmuteCaller()">Unmute</button>
+            <button id="btn_hangup" style="display:none;" class="btn" onclick="hangup();">Hangup</button>
+            <button id="btn_online" style="display:none;" class="btn" onclick="goAvailable()">Go Available</button>
+            <button id="btn_offline" style="display:none;" class="btn" onclick="goOffline()">Go Offline</button>
+        </section>
+        <section class="log">
+        </section>
+        <br />
+        <section>
+            <textarea id="log" readonly="true"></textarea>
+        </section>
+        <div style="padding-top:0.5em">
+            <a href="/agent_list">Back to Agent List</a>
+        </div>
     </div>
-</div>
 </body>
+
 </html>
