--- a/views/agent_desktop.html
+++ b/views/agent_desktop.html
@@ -42,8 +42,13 @@
 
 
     <script type="text/javascript">
-        let caller_id = '+18556371789'; // ADD YOUR TWILIO NUMBER HERE
+        ////////////////////////////////////////////////////////////////////////
+        ///////////////////////////////////////////////////////////////////////////////////////
+        
+        let caller_id = "+18556371789" // ADD YOUR TWILIO NUMBER HERE
 
+        ///////////////////////////////////////////////////////////////////////////////////////
+        ///////////////////////////////////////////////////////////////////////////////////////
         Twilio.Device.ready(function (device) {
             console.log("Client is ready for connections");
         });
@@ -73,11 +78,12 @@
         }
 
         function hangup() {
-            Twilio.Device.disconnectAll();
+            
             ReservationObject.task.complete();
-
+            Twilio.Device.disconnectAll();
+            
             worker.update("ActivitySid", activity_list["WrapUp"], function (error, worker) {
-                logger(worker.friendlyName + " has ended the call");
+                //logger(worker.friendlyName + " has ended the call");
 
                 if (error) {
                     console.log(error.code);
@@ -230,13 +236,18 @@
                 // Manager escalation, issue call instuction
                 console.log("manager task");
                 console.log(ReservationObject);
-
+            
                 console.log(window.location.protocol + "//" + window.location.host + "/transferTwiml?conference=" + ReservationObject.task.attributes.customer_taskSid)
                 ReservationObject.call(
                     // callFrom
                     caller_id,  // CC's phone number
-                    // callUrl - URI that is executed on the answering Worker's leg
                     window.location.protocol + "//" + window.location.host + "/transferTwiml?conference=" + ReservationObject.task.attributes.customer_taskSid,
+                    null,
+                    "true",
+                    null,
+                    null,
+                    null,
+                    // callUrl - URI that is executed on the answering Worker's leg
                     function (error, reservation) {
                         if (error) {
                             console.log(error.code);
@@ -247,7 +258,6 @@
                     }
                 );
 
-                //  ReservationObject.accept(); // Call instruction requires you to manually accept the Reservation prior to issuing the instruction
                 unmuteCaller(ReservationObject.task.attributes.customer, ReservationObject.task.attributes.conference);
             }
             else {
@@ -294,17 +304,16 @@
                 "from": (ReservationObject.task.attributes.from ? ReservationObject.task.attributes.from : '')
             };
 
-            console.log(ReservationObject.task.sid);
-
-            $.post("/callTransfer", {
-                "participant": ReservationObject.task.attributes.conference.participants.customer, //customer callSid
-                "conference": ReservationObject.task.attributes.conference.sid, //conference
-                //todo: remove// customer: ReservationObject.task.attributes.conference.participants.customer, //customer callsid - consider removing
-                "taskSid": ReservationObject.task.sid, //tasksid for the call transfer
-                "selected_language": (ReservationObject.task.attributes.selected_language ? ReservationObject.task.attributes.selected_language : ''),
-                "from": (ReservationObject.task.attributes.from ? ReservationObject.task.attributes.from : '')
-            }
-            );
+           
+             $.post("/callTransfer", {
+                 participant: ReservationObject.task.attributes.conference.participants.customer, //customer callSid
+                 conference: ReservationObject.task.attributes.conference.sid, //conference
+                 //todo: remove// customer: ReservationObject.task.attributes.conference.participants.customer, //customer callsid - consider removing
+                 taskSid: ReservationObject.task.sid, //tasksid for the call transfer
+                 selected_language: (ReservationObject.task.attributes.selected_language ? ReservationObject.task.attributes.selected_language : ''),
+                 from: (ReservationObject.task.attributes.from ? ReservationObject.task.attributes.from : '')
+             }
+             );
         }
 
         function muteCaller() {
