--- a/views/agent_desktop.html
+++ b/views/agent_desktop.html
@@ -45,7 +45,7 @@
         ////////////////////////////////////////////////////////////////////////
         ///////////////////////////////////////////////////////////////////////////////////////
         
-        let caller_id = "+18556371789" // ADD YOUR TWILIO NUMBER HERE
+        let caller_id = "" // ADD YOUR TWILIO NUMBER HERE
 
         ///////////////////////////////////////////////////////////////////////////////////////
         ///////////////////////////////////////////////////////////////////////////////////////
