--- a/views/agent_desktop.html
+++ b/views/agent_desktop.html
@@ -42,13 +42,8 @@
 
 
     <script type="text/javascript">
-        ////////////////////////////////////////////////////////////////////////
-        ///////////////////////////////////////////////////////////////////////////////////////
-        
-        let caller_id = "" // ADD YOUR TWILIO NUMBER HERE
+        let caller_id = "{{ caller_id }}"
 
-        ///////////////////////////////////////////////////////////////////////////////////////
-        ///////////////////////////////////////////////////////////////////////////////////////
         Twilio.Device.ready(function (device) {
             console.log("Client is ready for connections");
         });
@@ -78,10 +73,10 @@
         }
 
         function hangup() {
-            
+
             ReservationObject.task.complete();
             Twilio.Device.disconnectAll();
-            
+
             worker.update("ActivitySid", activity_list["WrapUp"], function (error, worker) {
                 //logger(worker.friendlyName + " has ended the call");
 
@@ -236,7 +231,7 @@
                 // Manager escalation, issue call instuction
                 console.log("manager task");
                 console.log(ReservationObject);
-            
+
                 console.log(window.location.protocol + "//" + window.location.host + "/transferTwiml?conference=" + ReservationObject.task.attributes.customer_taskSid)
                 ReservationObject.call(
                     // callFrom
@@ -304,16 +299,16 @@
                 "from": (ReservationObject.task.attributes.from ? ReservationObject.task.attributes.from : '')
             };
 
-           
-             $.post("/callTransfer", {
-                 participant: ReservationObject.task.attributes.conference.participants.customer, //customer callSid
-                 conference: ReservationObject.task.attributes.conference.sid, //conference
-                 //todo: remove// customer: ReservationObject.task.attributes.conference.participants.customer, //customer callsid - consider removing
-                 taskSid: ReservationObject.task.sid, //tasksid for the call transfer
-                 selected_language: (ReservationObject.task.attributes.selected_language ? ReservationObject.task.attributes.selected_language : ''),
-                 from: (ReservationObject.task.attributes.from ? ReservationObject.task.attributes.from : '')
-             }
-             );
+
+            $.post("/callTransfer", {
+                participant: ReservationObject.task.attributes.conference.participants.customer, //customer callSid
+                conference: ReservationObject.task.attributes.conference.sid, //conference
+                //todo: remove// customer: ReservationObject.task.attributes.conference.participants.customer, //customer callsid - consider removing
+                taskSid: ReservationObject.task.sid, //tasksid for the call transfer
+                selected_language: (ReservationObject.task.attributes.selected_language ? ReservationObject.task.attributes.selected_language : ''),
+                from: (ReservationObject.task.attributes.from ? ReservationObject.task.attributes.from : '')
+            }
+            );
         }
 
         function muteCaller() {
