--- a/views/agent_desktop.html
+++ b/views/agent_desktop.html
@@ -178,6 +178,7 @@
 
             console.log("Worker activity: " + activityName);
             let buttons = {
+                'pay':false,
                 'online': false,
                 'offline': false,
                 'mute': false,
@@ -206,10 +207,14 @@
                     buttons['mute'] = true;
                     buttons['unmute'] = true;
                     buttons['hangup'] = true;
+                    buttons['pay'] = true;
                     break;
                 case "WrapUp":
                     buttons['offline'] = true;
+                    buttons['pay'] = false;
+                    buttons['escalate'] = false;
                     buttons['online'] = true;
+
                     break;
             }
             Object.keys(buttons).forEach(function (button) {
@@ -338,6 +343,14 @@
             }
         }
 
+        function startPayment(){
+            console.log('payment called');
+            $.post("/startPay", {
+                taskSid: ReservationObject.task.sid,
+                customerCall: ReservationObject.task.attributes.conference.participants.customer
+                });
+        }
+
         function logger(message) {
             var log = document.getElementById('log');
             log.value += "\n> " + message;
@@ -425,6 +438,7 @@
             <button id="btn_accept" style="display:none;" class="btn" onclick="acceptReservation()">Accept</button>
             <button id="btn_reject" style="display:none;" class="btn" onclick="rejectReservation()">Reject</button>
             <button id="btn_escalate" style="display:none;" class="btn" onclick="transferCallBlind_Manager()">Escalate</button>
+            <button id="btn_pay" style="display:none;" class="btn" onclick="startPayment()">Start Payment</button>
             <button id="btn_mute" style="display:none;" class="btn" onclick="muteCaller()">Mute</button>
             <button id="btn_unmute" style="display:none;" class="btn" onclick="unmuteCaller()">Unmute</button>
             <button id="btn_hangup" style="display:none;" class="btn" onclick="hangup();">Hangup</button>
